--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Welcome to Taniti!</title>
 </head>
 <body>
-    <nav id="nav"></nav>
+    <nav id="nav">
+        <div id="nav-top">
+            <span id="nav-top-logo">Taniti</span>
+            <span id="nav-top-login">My Account</span>
+        </div>
+        <div id="nav-bot">
+            <span class="nav-bot-menu">Lodging</span>
+            <span class="nav-bot-menu">Events</span>
+            <span class="nav-bot-menu">Activities</span>
+            <span class="nav-bot-menu">About</span>
+        </div>
+    </nav>
     <header></header>
     <main></main>
     <footer></footer>
