--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div id="nav-bot">
             <span class="nav-bot-menu">Lodging</span>
+            <span class="nav-bot-menu">Car Rental</span>
             <span class="nav-bot-menu">Events</span>
             <span class="nav-bot-menu">Activities</span>
             <span class="nav-bot-menu">About</span>
