--- a/index.html
+++ b/index.html
@@ -4,23 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="src/css/style.css">
     <title>Welcome to Taniti!</title>
 </head>
 <body>
-    <nav id="nav">
-        <div id="nav-top">
-            <span id="nav-top-logo">Taniti</span>
-            <span id="nav-top-login">My Account</span>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Taniti</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Lodging</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Transportation</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Activities</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+            <span class="navbar-text">
+              My Account
+            </span>
+          </div>
         </div>
-        <div id="nav-bot">
-            <span class="nav-bot-menu">Lodging</span>
-            <span class="nav-bot-menu">Car Rental</span>
-            <span class="nav-bot-menu">Events</span>
-            <span class="nav-bot-menu">Activities</span>
-            <span class="nav-bot-menu">About</span>
-        </div>
-    </nav>
+      </nav>
     <header></header>
     <main></main>
     <footer></footer>
