my account anchor

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              My Account
+              <a class="nav-link" href="#">My Account</a>
             </span>
           </div>
         </div>
