--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./src/img/island1.jpg" class="d-block w-100" alt="...">
             <!--Photo by Elena Zhuravleva from Pexels-->
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <button type="button" class="btn btn-info">Book Your Trip</button>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./src/img/island2.jpg" class="d-block w-100" alt="...">
             <!--Photo by Vincent Gerbouin from Pexels-->
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <button type="button" class="btn btn-info">Book Your Trip</button>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./src/img/volcano.jpg" class="d-block w-100" alt="...">
             <!--Photo by Jordan Corrales from Pexels-->
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <button type="button" class="btn btn-info">Book Your Trip</button>
             </div>
           </div>
         </div>
@@ -83,7 +83,11 @@
         </button>
     </header>
 
-    <main></main>
+    <main class="container">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, incidunt necessitatibus at facere reprehenderit, omnis id quam consequuntur ad aut autem placeat, ipsum repudiandae alias sapiente excepturi laborum repellendus adipisci?</p>
+    </main>
     <footer></footer>
+    <!--Das Bootstrap bundle-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
