--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Elias Roberts">
+    <!--For C856 WGU-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="src/css/style.css">
     <title>Welcome to Taniti!</title>
@@ -49,7 +51,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./src/img/island1.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/island1.jpg" class="d-block w-100" alt="An island resort.">
             <!--Photo by Elena Zhuravleva from Pexels-->
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
@@ -57,7 +59,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./src/img/island2.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/island2.jpg" class="d-block w-100" alt="An island resort.">
             <!--Photo by Vincent Gerbouin from Pexels-->
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
@@ -65,7 +67,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./src/img/volcano.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/volcano.jpg" class="d-block w-100" alt="A volcano">
             <!--Photo by Jordan Corrales from Pexels-->
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
@@ -83,11 +85,15 @@
         </button>
     </header>
 
-    <main class="container">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, incidunt necessitatibus at facere reprehenderit, omnis id quam consequuntur ad aut autem placeat, ipsum repudiandae alias sapiente excepturi laborum repellendus adipisci?</p>
+    <main id="main" class="container">
+        <p id="island-blurb">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, incidunt necessitatibus at facere reprehenderit, 
+            omnis id quam consequuntur ad aut autem placeat, ipsum repudiandae alias sapiente excepturi laborum repellendus adipisci?</p>
+        <div id="map" class="container-fluid text-center">
+            <img id="map-img" src="./src/img/island-map.jpg" class="img-fluid" alt="Map of Taniti">
+        </div>
     </main>
     <footer></footer>
-    <!--Das Bootstrap bundle-->
+    <!--Das Bootstrap, the worky bits-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
