--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@
             <img id="map-img" src="./src/img/island-map.jpg" class="img-fluid" alt="Map of Taniti">
         </div>
     </main>
-    <footer></footer>
+
+    <footer>
+        <p class="footer-text">© 2021 Taniti. All Rights Reserved.</p>
+        <p class="footer-text" id="top-btn">Back to Top</p>
+        <p class="footer-text">Contact Info</p>
+    </footer>
     <!--Das Bootstrap, the worky bits-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="src/js/scripts.js"></script>
 </body>
 </html>
