carousel img height

--- a/index.html
+++ b/index.html
@@ -86,11 +86,20 @@
     </header>
 
     <main id="main" class="container">
-        <p id="island-blurb">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, incidunt necessitatibus at facere reprehenderit, 
-            omnis id quam consequuntur ad aut autem placeat, ipsum repudiandae alias sapiente excepturi laborum repellendus adipisci?</p>
+        
+        <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
+            velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
+            pork loin. Cow salami et tempor pariatur picanha, officia irure laboris kevin venison chicken ad. Bacon picanha cillum
+             ipsum, consequat strip steak venison shoulder cupim. Salami shank elit rump, porchetta laboris pork loin ipsum.</p>
+        <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
+        velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
+        pork loin. Cow salami et tempor pariatur picanha, officia irure laboris kevin venison chicken ad. Bacon picanha cillum
+            ipsum, consequat strip steak venison shoulder cupim. Salami shank elit rump, porchetta laboris pork loin ipsum.</p>
+
         <div id="map" class="container-fluid text-center">
             <img id="map-img" src="./src/img/island-map.jpg" class="img-fluid" alt="Map of Taniti">
         </div>
+
     </main>
 
     <footer>
