--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">Lodging</a>
+                <a class="nav-link" href="./pages/lodging.html">Lodging</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Transportation</a>
@@ -43,50 +43,52 @@
         </div>
       </nav>
 
-      <header id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <header class="container text-center">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./src/img/island1.jpg" class="d-block w-100" alt="An island resort.">
+                <!--Photo by Elena Zhuravleva from Pexels-->
+                <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <button type="button" class="btn btn-info">Book Your Trip</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./src/img/island2.jpg" class="d-block w-100" alt="An island resort.">
+                <!--Photo by Vincent Gerbouin from Pexels-->
+                <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <button type="button" class="btn btn-info">Book Your Trip</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./src/img/volcano.jpg" class="d-block w-100" alt="A volcano">
+                <!--Photo by Jordan Corrales from Pexels-->
+                <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <button type="button" class="btn btn-info">Book Your Trip</button>
+                </div>
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./src/img/island1.jpg" class="d-block w-100" alt="An island resort.">
-            <!--Photo by Elena Zhuravleva from Pexels-->
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <button type="button" class="btn btn-info">Book Your Trip</button>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./src/img/island2.jpg" class="d-block w-100" alt="An island resort.">
-            <!--Photo by Vincent Gerbouin from Pexels-->
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <button type="button" class="btn btn-info">Book Your Trip</button>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./src/img/volcano.jpg" class="d-block w-100" alt="A volcano">
-            <!--Photo by Jordan Corrales from Pexels-->
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <button type="button" class="btn btn-info">Book Your Trip</button>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
     </header>
 
     <main id="main" class="container">
-        
+
         <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
             velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
             pork loin. Cow salami et tempor pariatur picanha, officia irure laboris kevin venison chicken ad. Bacon picanha cillum
