--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                 <a class="nav-link" href="./pages/lodging.html">Lodging</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Transportation</a>
+                <a class="nav-link" href="./pages/transportation.html">Transportation</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
+                <a class="nav-link" href="./pages/events.html">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Activities</a>
+                <a class="nav-link" href="./pages/activities.html">Activities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
             </ul>
             <span class="navbar-text">
-              <a class="nav-link" href="#">My Account</a>
+              <a class="nav-link" href="./pages/account.html">My Account</a>
             </span>
           </div>
         </div>
@@ -87,7 +87,38 @@
         </div>
     </header>
 
+    <hr>
+
     <main id="main" class="container">
+
+        <section id="explore" class="text-center">
+            <h1>EXPLORE TANITI</h1>
+            <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <figure class="figure">
+                        <img src="./src/img/lodging.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <!-- Photo by thanhhoa tran from Pexels -->
+                        <figcaption class="figure-caption">Lodging</figcaption>
+                      </figure>
+                  </div>
+                  <div class="col">
+                    <figure class="figure">
+                        <img src="./src/img/events.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <!-- Photo by Vishnu R Nair from Pexels -->
+                        <figcaption class="figure-caption">Events</figcaption>
+                      </figure>
+                  </div>
+                  <div class="col">
+                    <figure class="figure">
+                        <img src="./src/img/activities.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <!-- Photo by Oliver Sjöström from Pexels -->
+                        <figcaption class="figure-caption">Activities</figcaption>
+                      </figure>
+                  </div>
+                </div>
+              </div>
+        </section>
 
         <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
             velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
