search form on lodging page

--- a/index.html
+++ b/index.html
@@ -92,33 +92,44 @@
     <main id="main" class="container">
 
         <section id="explore" class="text-center">
-            <h1>EXPLORE TANITI</h1>
+            <h2>EXPLORE TANITI</h2>
             <div class="container">
                 <div class="row">
                   <div class="col">
+                    <a href="./pages/lodging.html">
                     <figure class="figure">
-                        <img src="./src/img/lodging.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <img src="./src/img/lodging.jpg" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
                         <!-- Photo by thanhhoa tran from Pexels -->
                         <figcaption class="figure-caption">Lodging</figcaption>
                       </figure>
+                    </a>
                   </div>
                   <div class="col">
+                    <a href="./pages/events.html">
                     <figure class="figure">
-                        <img src="./src/img/events.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <img src="./src/img/events.jpg" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
                         <!-- Photo by Vishnu R Nair from Pexels -->
                         <figcaption class="figure-caption">Events</figcaption>
                       </figure>
+                      </a>
                   </div>
                   <div class="col">
+                    <a href="./pages/activities.html">
                     <figure class="figure">
-                        <img src="./src/img/activities.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <img src="./src/img/activities.jpg" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
                         <!-- Photo by Oliver Sjöström from Pexels -->
                         <figcaption class="figure-caption">Activities</figcaption>
                       </figure>
+                      </a>
                   </div>
                 </div>
               </div>
         </section>
+
+        <hr>
+
+    <section id="about" class="text-center">
+        <h2>ABOUT TANITI</h2>
 
         <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
             velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
@@ -132,6 +143,7 @@
         <div id="map" class="container-fluid text-center">
             <img id="map-img" src="./src/img/island-map.jpg" class="img-fluid" alt="Map of Taniti">
         </div>
+    </section>
 
     </main>
 
