--- a/pages/lodging.html
+++ b/pages/lodging.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">Lodging</a>
+                <a class="nav-link active" href="#">Lodging</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Transportation</a>
@@ -44,6 +44,43 @@
       </nav>
 
     <main id="main" class="container">
+      <section id="search">
+      <!--Form ripped from 100forms.com to save time, sry-->
+        <form>
+          <div style="max-width: 400px;">
+          </div>
+          <div style="padding-bottom: 18px;font-size : 24px;">Find a place to stay:</div>
+          <a href="./transportation.html"><button type="button" class="btn btn-warning">Skip</button></a>
+          <div style="display: flex; padding-bottom: 18px;max-width : 450px;">
+          </div>
+          <div style="padding-bottom: 18px;">Arrival date<br/>
+          <input type="text" id="data_6" name="data_6" style="max-width : 250px;" class="form-control"/>
+          </div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
+          <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
+          <script type="text/javascript">new Pikaday({ field: document.getElementById('data_6') });</script>
+          <div style="padding-bottom: 18px;">Departure date<br/>
+          <input type="text" id="data_7" name="data_7" style="max-width : 250px;" class="form-control"/>
+          </div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
+          <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
+          <script type="text/javascript">new Pikaday({ field: document.getElementById('data_7') });</script>
+          <div style="padding-bottom: 18px;">Number of adults<br/>
+          <input type="number" id="data_8" name="data_8" style="max-width : 250px;" class="form-control"/>
+          </div>
+          <div style="padding-bottom: 18px;">Number of children<br/>
+          <input type="number" id="data_9" name="data_9" style="max-width : 250px;" class="form-control"/>
+          </div>
+          <button type="button" class="btn btn-info">Search</button>
+        </form>
+      </section>
+
+      <hr>
+      
+      <section id="search-results">
+
+      </section>
+        
     </main>
 
     <footer>
