transportation page done

--- a/pages/lodging.html
+++ b/pages/lodging.html
@@ -49,7 +49,7 @@
         <form>
           <div style="max-width: 400px;">
           </div>
-          <div style="padding-bottom: 18px;font-size : 24px;">Find a place to stay:</div>
+          <h2>Find a place to stay:</h2>
           <a href="./transportation.html"><button type="button" class="btn btn-warning">Skip</button></a>
           <div style="display: flex; padding-bottom: 18px;max-width : 450px;">
           </div>
@@ -76,9 +76,58 @@
       </section>
 
       <hr>
-      
-      <section id="search-results">
 
+      <section id="search-results">
+        <h3>Search Results</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <a href="#">
+              <figure class="figure">
+                  <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
+                  <figcaption class="figure-caption">INFO</figcaption>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <label class="form-check-label" for="exampleRadios1">
+                      Reserve
+                    </label>
+                  </div>
+                </figure>
+              </a>
+            </div>
+            <div class="col">
+              <a href="#">
+                <figure class="figure">
+                    <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
+                    <figcaption class="figure-caption">INFO</figcaption>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                      <label class="form-check-label" for="exampleRadios1">
+                        Reserve
+                      </label>
+                    </div>
+                  </figure>
+                </a>
+            </div>
+            <div class="col">
+              <a href="#">
+                <figure class="figure">
+                    <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
+                    <figcaption class="figure-caption">INFO</figcaption>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                      <label class="form-check-label" for="exampleRadios1">
+                        Reserve
+                      </label>
+                    </div>
+                  </figure>
+                </a>
+            </div>
+          </div>
+          <div class="text-center">
+            <a href="./transportation.html"><button type="button" class="btn btn-info">Next</button></a>
+          </div>
+        </div>
       </section>
         
     </main>
