--- a/pages/events.html
+++ b/pages/events.html
@@ -32,9 +32,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Activities</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
             </ul>
             <span class="navbar-text">
               <a class="nav-link" href="#">My Account</a>
@@ -50,8 +47,8 @@
           <div style="max-width: 400px;">
           </div>
           <h2>Attend an event:</h2>
-          <a href="./lodging.html"><button type="button" class="btn btn-secondary">Back to Transportation</button></a>
-          <a href="./events.html"><button type="button" class="btn btn-warning">Skip</button></a>
+          <a href="./transportation.html"><button type="button" class="btn btn-secondary">Back to Transportation</button></a>
+          <a href="./activities.html"><button type="button" class="btn btn-warning">Skip</button></a>
           <div style="display: flex; padding-bottom: 18px;max-width : 450px;">
           </div>
           <div style="padding-bottom: 18px;">Date<br/>
