payment page finished

--- a/pages/activities.html
+++ b/pages/activities.html
@@ -65,7 +65,7 @@
               <option value="volvo">Hiking</option>
               <option value="saab">Zip-Lining</option>
               <option value="fiat">Helicopter Ride</option>
-              <option value="audi">You Get The Idea</option>
+              <option value="audi">All</option>
             </select>
             </div>
           <button type="button" class="btn btn-info">Search</button>
