account overview page finished

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -35,7 +35,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              <a class="nav-link" href="#">My Account</a>
+              <a class="nav-link" href="./account.html">My Account</a>
             </span>
           </div>
         </div>
@@ -155,8 +155,8 @@
                 <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing<br>
                 <input type="checkbox" name="savepmt"> Save payment info
               </label>
-              <button type="button" class="btn btn-success">Confirm and Submit</button>
-              <button type="button" class="btn btn-cancel">Cancel</button>
+              <a href="./account.html"><button class="btn btn-success">Confirm and Submit</button></a>
+              <a href="../index.html"></a><button type="button" class="btn btn-cancel">Cancel</button>
             </form>
           </div>
         </div>
