--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -156,7 +156,7 @@
                 <input type="checkbox" name="savepmt"> Save payment info
               </label>
               <a href="./account.html"><button type="button" class="btn btn-success">Confirm and Submit</button></a>
-              <a href="../index.html"></a><button type="button" class="btn btn-cancel">Cancel</button>
+              <a href="../index.html"><button type="button" class="btn btn-cancel">Cancel</button></a>
             </form>
           </div>
         </div>
