fixed placeholder text for login screen

--- a/pages/login.html
+++ b/pages/login.html
@@ -47,10 +47,10 @@
           </div>
           <h2>Login</h2>
         <div style="padding-bottom: 18px;">Email<br/>
-        <input type="email" placeholder="New Mexico" style="max-width : 250px;" class="form-control"/>
+        <input type="email" placeholder="Email" style="max-width : 250px;" class="form-control"/>
         </div>
         <div style="padding-bottom: 18px;">Password<br/>
-        <input type="password" placeholder="Visa ending in 0000" style="max-width : 250px;" class="form-control"/>
+        <input type="password" placeholder="Password" style="max-width : 250px;" class="form-control"/>
         </div>
         <div class="text-center">
           <a id="login" href="account.html"><button type="button" class="btn btn-info">Login</button></a>
